//
//  App.StringConstants.swift
//

import Foundation


extension App {
    public enum StringConstants {
        public static let home = "Home"
        public static let profile = "Profile"
        public static let detail = "Detail"
        public static let Username = "Username"
        public static let Password = "Password"
        public static let url_error = "Invalid URL"
        public static let data = "data"
        public static let products = "products"
        public static let addToCart = "ADD TO CART"
        public static let logOut = "LOG OUT"
        public static let d_o_b = "D.O.B"
        public static let Firstname = "Firstname"
        public static let Lastname = "Lastname"
        public static let Address = "Address"
        public static let CONGRATULATIONS = "CONGRATULATIONS!"
        public static let itemAddedToCart = "Item added to cart"
        public static let addMore = "ADD MORE"
        public static let dismiss = "DISMISS"
        public static let HURRAY = "HURRAY!!"
        public static let rewardsProgramSuccessMessage = "You have been successfully added to our rewards program"
        public static let ok = "OK"
        
        //User Model
        public static let username = "username"
        public static let firstname = "firstname"
        public static let lastName = "lastName"
        public static let dob = "dob"
        public static let address = "address"
        public static let pointsEarned = "pointsEarned"
        public static let walletBalance = "walletBalance"
        
        //Home Page Model
        public static let brand = "brand"
        public static let name = "name"
        public static let productDesc = "productDesc"
        public static let price = "price"
        public static let offerPrice = "offerPrice"
        public static let productUrl = "productUrl"
        
        //Home
        public static let rewardsProgramMessage = "CLICK HERE TO JOIN OUR REWARDS PROGRAM"
        
        //Error Messages
        public static let fieldsEmptyError = "Username or Password cannot be empty"
        public static let invalidURLError = "Invalid URL"
        public static let incorrectAuthDetailsError = "The username or password is incorrect"
        
        // API Url
        public static let userDetailsURL = "https://run.mocky.io/v3/aaf97364-eedc-46a5-8f9e-56eb4b3cedd2"
        public static let itemsURL = "https://run.mocky.io/v3/bc09a745-4346-4025-9611-9da76366dbbc"
    }
}
