//
//  StringConstants.swift
//

import Foundation


struct StringConstants {
    static let logo = "logo"
    static let home = "Home"
    static let profile = "Profile"
    static let detail = "Detail"
    static let house = "house"
    static let house_fill = "house.fill"
    static let person = "person"
    static let person_fill = "person.fill"
    static let username = "Username"
    static let password = "Password"
    static let get = "GET"
}
