...
                            <constraints>
                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="KEe-NJ-OlQ"/>
                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="TFn-u3-GmV"/>
                            </constraints>
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <state key="normal" title="Button"/>
                            <buttonConfiguration key="configuration" style="plain" title="SIGN IN">
                                <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
                            </buttonConfiguration>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                    <real key="value" value="4"/>
                                </userDefinedRuntimeAttribute>
...
